--- a/Spokeo/css/styles.css
+++ b/Spokeo/css/styles.css
@@ -52,6 +52,7 @@ Desktop Layout
 - Content Panels
 - - Panel Headers
 - Footer
+- Firefox
 */
 
 /*----------------------------------------------------------
@@ -358,7 +359,7 @@ input:focus {
 
 #search {
   border: none;
-  width: 80%;
+  width: 93%;
 }
 
 .search-submit {
@@ -396,7 +397,6 @@ input:focus {
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
 }
-
 /*----------------------------------------------------------
  * $Content Panels
  * -----------------------------------------------------------*/
@@ -450,3 +450,18 @@ input:focus {
 .copyright {
   margin-left:6px;
 }
+
+
+/*----------------------------------------------------------
+ * $Firefox CSS adjustment
+ * -----------------------------------------------------------*/
+@-moz-document url-prefix() {
+  /* Since it does not looks good on firefox, fix it here */
+  .select-menu-wrapper .dropdown {
+    padding: 7px 13px 9px 12px;
+   }
+   .search-submit {
+      margin-top: 2px;
+    }
+ }
+
